--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "cinema-tickets-javascript",
   "description": "This is a coding exercise which will allow you to demonstrate how you code and your approach to a given problem.",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "engines": {
-    "node": ">=20.9.0"
+    "node": ">=16.15.1"
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/pairtest/TicketService.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "jest": "28.1.1",
+    "mocha": "10.0.0"
   }
 }
